# gamesparks-cpp-base

./: CONTRIBUTING.md  NOTICE  README.md
base/build_scripts/: CMakeLists.txt
base/include/GameSparks/: GSRequestData.h
base/include/cjson/: cJSON.h
base/include/easywsclient/: CertificateStore.hpp
base/samples/: sample03Authentication.cpp  sample04ListAchievements.cpp  sample05ChallangeRequest.cpp  sample06Durablerequests.cpp  sample06Stresstest.cpp  sample07Realtime.cpp  sampleExtra01DateTimeConversion.cpp  sample_configuration.h
base/samples/extra/: usleep.h
base/src/GameSparks/: GS.cpp  gsstl.cpp
base/src/cjson/: cJSON.cpp
base/src/easywsclient/: easywsclient.cpp
tests/: CMakeLists.txt  Coverage.cmake
tests/AndroidStudio/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
tests/AndroidStudio/app/src/androidTest/java/com/gamesparks/GameSparksTests/: ExampleInstrumentedTest.java
tests/AndroidStudio/app/src/main/: AndroidManifest.xml
tests/AndroidStudio/app/src/main/cpp/: native-lib.cpp
tests/AndroidStudio/app/src/main/java/com/gamesparks/GameSparksTests/: MainActivity.java
tests/AndroidStudio/app/src/main/res/layout/: activity_main.xml
tests/AndroidStudio/app/src/main/res/values/: strings.xml
tests/AndroidStudio/app/src/test/java/com/gamesparks/GameSparksTests/: ExampleUnitTest.java
tests/AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
tests/base/: BugGameCenterConnectRequest_SetTimestamp_truncation.cpp  BugParseDate.cpp  BugParseNumber.cpp  BugPersistentAuthenticationResponse.cpp  BugUEEndlessLoop.cpp  BugUninitializedGameSparksAuthenticated.cpp  BugUnregisterMessageListenerBeforeDestruct.cpp  CertificateVerification.cpp  TestAttachCallbacks.cpp  TestAuthentication.cpp  TestConnect.cpp  TestDeviceAuthentication.cpp  TestDeviceStats.cpp  TestDurableRequests.cpp  TestGSDataGetKeys.cpp  TestGetDevcieId.cpp  TestMessageDispatching.cpp  TestNetworkFailures.cpp  TestOnNonce.cpp  TestPlatform.h  TestSerializeRequestQueue.cpp  TestSetPlayerId.cpp  TestStress.cpp  TestUpdateIsNonBlocking.cpp  TestUserDataIsCopied.cpp
tests/gtest/: CMakeLists.txt
tests/gtest/include/gtest/internal/: gtest-port.h
tests/gtest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest.cc  gtest_main.cc
tests/rt/: rt_Program.cpp  rt_TestUtils.hpp  rt_delivery_and_parsing.cpp  rt_exception_system.cpp  rt_little_endian.cpp  rt_more_than_two_fields.cpp  rt_session_close.cpp  rt_shift_warning.cpp  rt_sudden_exit.cpp
